refactor: refactored path routes
